--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <script src="app.js" defer></script>
 </head>
 <body>
-    <h3>Score:<span id="result"></span></h3>
+    <h1>Welcome to The Memory Game</h1>
+    Rules: The game is to be able to match 2 of the same cards on the field together!
+    You win when you are able to match all the cards on the grid together!
+    <h3 id="result"></h3>
 
     <div class="grid">
 </body>
